# torino

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/torino/: claude_client.py  cli.py  config.py  jira_client.py  models.py
src/torino/agents/: debate.py  roles.py
src/torino/triage/: classifier.py  validators.py
tests/: test_apply_triage.py  test_claude_client.py  test_cli.py  test_config.py  test_debate.py  test_fetch_untriaged.py  test_jira_client.py  test_search_similar.py  test_validators.py
